--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: c
 compiler: clang
+
+before_install:
+- sudo apt-get -qq update
+- sudo apt-get install -y libncurses-dev
+
+script:
+
+- make
+
